--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
          <a href="#">Realidade Aumentada</a>
          <a href="#">Realidade  Virtual</a>
     </nav>    </header>
+    <main class="container">
+        <section id="featured" class=" gap-16 grid grid-flow-col">
+            <div><img src="assets/image/Image 01.png" alt=""></div>
+            <div class="gap-16 grid grid-col-2">
+        <div >
+            <img src="assets/image/Image 02.png" alt="">
+        </div>
+        <div>
+            <img src="assets/image/Image 03.png" alt="">
+        </div>
+        <div>
+            <img src="assets/image/Image 04.png" alt="">
+        </div>
+        <div>
+            <img src="assets/image/Image 05.png" alt="">
+        </div>
+    </div>
+        </section>
+    </main>
 
 </body>
 </html>
