--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>    </header>
     <main class="container">
         <section id="featured" class=" gap-16 grid grid-flow-col">
-            <div><img src="assets/image/Image 01.png" alt=""></div>
+            <div class="card"><img src="assets/image/Image 01.png" alt=""></div>
             <div class="gap-16 grid grid-col-2">
         <div >
             <img src="assets/image/Image 02.png" alt="">
