--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     </nav>    </header>
     <main class="container">
         <section id="featured" class=" gap-16 grid grid-flow-col">
-            <div class="card"><img src="assets/image/Image 01.png" alt=""></div>
+            <figure class="card"><img src="assets/image/Image 01.png" alt="">
+                <figcaption>
+                    <span class="content-tag">Robótica</span>
+                    <h2 class="text-2x"> <Strong>Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
+                    </Strong> </figcaption>
+            </figure>
             <div class="gap-16 grid grid-col-2">
         <div >
             <img src="assets/image/Image 02.png" alt="">
